--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
-<app-right-bar></app-right-bar>
+<div class="container">
+  <div class="right-bar">
+    <app-right-bar></app-right-bar>
+  </div>
+  <div class="calendar">
+    <app-header></app-header>
+    <hr><br>
+    <app-exhibitions></app-exhibitions>
+  </div>
+</div>
+
+
+
+
 
