added functional add venues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,1 @@
-<div class="container">
-  <div class="right-bar">
-    <app-right-bar></app-right-bar>
-  </div>
-  <div class="calendar">
-    <app-header></app-header>
-    <hr><br>
-    <app-exhibitions></app-exhibitions>
-  </div>
-</div>
-
-
-
-
-
+<router-outlet></router-outlet>
