--- a/src/app/components/event-dialog/event-dialog.component.html
+++ b/src/app/components/event-dialog/event-dialog.component.html
@@ -1,21 +1,18 @@
-<div class="modal-overlay" (click)="onCancel()"></div>
 <div class="modal-content">
-  <h2 class="modal-title">{{ eventData.id ? 'Редагувати' : 'Додати' }} виставку</h2>
-  <form [formGroup]="eventForm">
+  <h2 class="modal-title">Event</h2>
+  <form [formGroup]="eventForm" (ngSubmit)="onSave()">
     <div class="modal-body">
-      <label for="title">Назва</label>
-      <input class="input" id="title" type="text" formControlName="title" />
-
-      <label for="date">Дата</label>
-      <input class="input" id="date" type="date" formControlName="date" />
-
-      <label for="venue">Опис</label>
-      <input class="input" id="venue" type="text" formControlName="venue" />
+      <label for="title">Title</label>
+      <input id="title" type="text" formControlName="title" />
+      <label for="date">Date</label>
+      <input id="date" type="date" formControlName="date" />
+      <label for="venue">Venue</label>
+      <input id="venue" type="text" formControlName="venue" />
     </div>
     <div class="modal-footer">
-      <button type="button" (click)="onCancel()">Відмінити</button>
-      <button type="button" (click)="onSave()">Зберегти</button>
-      <button *ngIf="eventData.id" type="button" (click)="onDelete()">Видалити</button>
+      <button type="button" (click)="onCancel()">Cancel</button>
+      <button type="submit">Save</button>
     </div>
   </form>
+  <button *ngIf="eventData.id" type="button" (click)="onDelete()">Delete</button>
 </div>
